# inventory-guard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  taskfile.yaml
.github/workflows/: quality_assurance.yaml  release.yaml
.hypothesis/constants/: 062e933285e107d9  200dd4e653f6421a  2f614ddc0ca8cc8e  3d2f50ee34d6ef13  8a2308e1da251337  fe621c7bbe77e68c
.hypothesis/examples/04e6b3400353b141/: 98acf54897919abd
.hypothesis/examples/98acf54897919abd/: 0b43381a8fe4ba4d  0eb734685b06eea1  18813205b6fc37a3  20101ec8ee81e6ac  22d8512aaa2d3c43  527e7904d7481f3b  71b9a7f2c7125c2c  77d439e068b45d9c  8bf4c8441dca71ec  d96ed4608c4f7776  fcc26cd361c7399a
src/inventory_guard/: __init__.py  compare.py  config.py  main.py
tests/: test_inventory_guard.py  test_properties.py
